[UPDATE] Add all section of page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <!-- Header with logo and text -->
+    <header>
+
+    </header>
+
+    <!-- Main with header and to do list  -->
+    <main>
+        <!-- Container of two div -->
+        <div class="container">
+            <!-- head of main page, with two button -->
+            <div class="head-main">
+
+            </div>
+            <!-- Main content ofa page with To Do List  -->
+            <div class="content">
+
+            </div>
+        </div>
+    </main>
 </body>
 </html>
