[UPDATE] Added header of page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <!-- Header with logo and text -->
     <header>
-
+        <img class="logo" src="./img/Logo.png" alt="Boolean logo">
+        <h1>Toboolist</h1>
     </header>
 
     <!-- Main with header and to do list  -->
