[UPDATE & FIX] fix background and add main header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <!-- head of main page, with two button -->
             <div class="head-main">
-
+                <button class="btn">Add Task</button> <button class="btn white">Add Section</button>
             </div>
             <!-- Main content ofa page with To Do List  -->
             <div class="content">
