--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <ul>
                     <!-- 1st Item List -->
                     <li>
-                        
-                        <h2>&#9660; New Task</h2>
+                        <h3><span class="dash">&#9660;</span> New Task</h3>
                         <!-- linked list -->
                         <ul>
                             <li><span class="check">&check;</span> Quarterly Newsletter <button class="button editorial">Editorial</button></li>
@@ -36,7 +35,7 @@
                     </li>
                     <!-- 2nd Item List -->
                     <li>
-                        <h2>&#9660; Today</h2>
+                        <h3><span class="dash">&#9660;</span> Today</h3>
                         <ul>
                             <li><span class="check">&check;</span> Recruting blog post <button class="button editorial">Editorial</button></li>
                             <li><span class="check">&check;</span> Mobile app launch <button class="button goals">Q1 Goals</button></li>
@@ -46,15 +45,12 @@
                     </li>
                     <!-- 3rd Item List -->
                     <li>
-                        <span>
-                            &#9660;<h2> Upcoming</h2>
-                        </span>
-                        
+                        <h3><span class="dash">&#9660;</span> Upcoming</h3>
                         <ul>
                             <li><span class="cross">&cross;</span> Schedule meeting with Alex</li>
                             <li><span class="check">&check;</span> Homepage refresh<button class="button site">Website</button></li>
                             <li><span class="check">&check;</span> Onboard new Sales team mebers <button class="button sales">Sales</button></li>
-                            <li><span class="check">&check;</span> Review editorial cleaner <button class="button esitorial">Editorial</button></li>
+                            <li><span class="check">&check;</span> Review editorial cleaner <button class="button editorial">Editorial</button></li>
                         </ul>
                     </li>
                 </ul>
