[FIX] Button, icon list and space between two div

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <!-- head of main page, with two button -->
             <div class="head-main">
-                <button class="btn">Add Task</button> <button class="btn white">Add Section</button>
+                <button class="btn blue">Add Task</button> <button class="btn white">Add Section</button>
             </div>
             <!-- Main content ofa page with To Do List  -->
             <div class="content">
@@ -30,27 +30,27 @@
                         <h3><span class="dash">&#9660;</span> New Task</h3>
                         <!-- linked list -->
                         <ul>
-                            <li><span class="check">&check;</span> Quarterly Newsletter <button class="button editorial">Editorial</button></li>
+                            <li><span class="id check">&check;</span> Quarterly Newsletter <button class="button editorial">Editorial</button></li>
                         </ul>
                     </li>
                     <!-- 2nd Item List -->
                     <li>
                         <h3><span class="dash">&#9660;</span> Today</h3>
                         <ul>
-                            <li><span class="check">&check;</span> Recruting blog post <button class="button editorial">Editorial</button></li>
-                            <li><span class="check">&check;</span> Mobile app launch <button class="button goals">Q1 Goals</button></li>
-                            <li><span class="cross">&cross;</span> Interview John H. <button class="button recruting">Recrutingl</button></li>
-                            <li><span class="check">&check;</span> Summit update to mobile storefonts<button class="button mobile">Mobile</button></li>
+                            <li><span class="id check">&check;</span> Recruting blog post <button class="button editorial">Editorial</button></li>
+                            <li><span class="id check">&check;</span> Mobile app launch <button class="button goals">Q1 Goals</button></li>
+                            <li><span class="id cross">&cross;</span> Interview John H. <button class="button recruting">Recrutingl</button></li>
+                            <li><span class="id check">&check;</span> Summit update to mobile storefonts<button class="button mobile">Mobile</button></li>
                         </ul>
                     </li>
                     <!-- 3rd Item List -->
                     <li>
                         <h3><span class="dash">&#9660;</span> Upcoming</h3>
                         <ul>
-                            <li><span class="cross">&cross;</span> Schedule meeting with Alex</li>
-                            <li><span class="check">&check;</span> Homepage refresh<button class="button site">Website</button></li>
-                            <li><span class="check">&check;</span> Onboard new Sales team mebers <button class="button sales">Sales</button></li>
-                            <li><span class="check">&check;</span> Review editorial cleaner <button class="button editorial">Editorial</button></li>
+                            <li><span class="id cross">&cross;</span> Schedule meeting with Alex</li>
+                            <li><span class="id check">&check;</span> Homepage refresh<button class="button site">Website</button></li>
+                            <li><span class="id check">&check;</span> Onboard new Sales team mebers <button class="button sales">Sales</button></li>
+                            <li><span class="id check">&check;</span> Review editorial cleaner <button class="button editorial">Editorial</button></li>
                         </ul>
                     </li>
                 </ul>
