--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
                         <h3><span class="dash">&#9660;</span> New Task</h3>
                         <!-- linked list -->
                         <ul>
-                            <li><span class="id check">&check;</span> Quarterly Newsletter <button class="button editorial">Editorial</button></li>
+                            <li><span class="status check">&check;</span> Quarterly Newsletter <button class="button editorial">Editorial</button></li>
                         </ul>
                     </li>
                     <!-- 2nd Item List -->
                     <li>
                         <h3><span class="dash">&#9660;</span> Today</h3>
                         <ul>
-                            <li><span class="id check">&check;</span> Recruting blog post <button class="button editorial">Editorial</button></li>
-                            <li><span class="id check">&check;</span> Mobile app launch <button class="button goals">Q1 Goals</button></li>
-                            <li><span class="id cross">&cross;</span> Interview John H. <button class="button recruting">Recrutingl</button></li>
-                            <li><span class="id check">&check;</span> Summit update to mobile storefonts<button class="button mobile">Mobile</button></li>
+                            <li><span class="status check">&check;</span> Recruting blog post <button class="button editorial">Editorial</button></li>
+                            <li><span class="status check">&check;</span> Mobile app launch <button class="button goals">Q1 Goals</button></li>
+                            <li><span class="status cross">&cross;</span> Interview John H. <button class="button recruting">Recrutingl</button></li>
+                            <li><span class="status check">&check;</span> Summit update to mobile storefonts<button class="button mobile">Mobile</button></li>
                         </ul>
                     </li>
                     <!-- 3rd Item List -->
                     <li>
                         <h3><span class="dash">&#9660;</span> Upcoming</h3>
                         <ul>
-                            <li><span class="id cross">&cross;</span> Schedule meeting with Alex</li>
-                            <li><span class="id check">&check;</span> Homepage refresh<button class="button site">Website</button></li>
-                            <li><span class="id check">&check;</span> Onboard new Sales team mebers <button class="button sales">Sales</button></li>
-                            <li><span class="id check">&check;</span> Review editorial cleaner <button class="button editorial">Editorial</button></li>
+                            <li><span class="status cross">&cross;</span> Schedule meeting with Alex</li>
+                            <li><span class="status check">&check;</span> Homepage refresh<button class="button site">Website</button></li>
+                            <li><span class="status check">&check;</span> Onboard new Sales team mebers <button class="button sales">Sales</button></li>
+                            <li><span class="status check">&check;</span> Review editorial cleaner <button class="button editorial">Editorial</button></li>
                         </ul>
                     </li>
                 </ul>
